--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url("images/music3.jpg");
+  background: url("https://th.bing.com/th/id/R.4278079bb07fd2330c9c8256ba1ae169?rik=t37pM1iR%2bEPVwA&riu=http%3a%2f%2fwallpapercave.com%2fwp%2ftU89SSy.jpg&ehk=CYdCzuk0flgpZZm%2blSOWBCfFDIjWrozfvPsacKRoh5Q%3d&risl=&pid=ImgRaw&r=0");
   background-size: cover;
   background-position: center;
 }
@@ -23,6 +23,10 @@ form {
   text-align: center;
   width: 100%;
   max-width: 350px;
+}
+h2 {
+  color: #ffd423;
+  letter-spacing: 3px;
 }
 
 h1 {
@@ -89,6 +93,7 @@ h1 {
   transition: 0.5s background;
   font-size: 16px;
   margin-top: 15px;
+  letter-spacing: 2px;
 }
 
 .btn:hover {
