--- a/student-portal-style.css
+++ b/student-portal-style.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url("images/music3.jpg") no-repeat center center/cover;
+  background: url("https://th.bing.com/th/id/R.4278079bb07fd2330c9c8256ba1ae169?rik=t37pM1iR%2bEPVwA&riu=http%3a%2f%2fwallpapercave.com%2fwp%2ftU89SSy.jpg&ehk=CYdCzuk0flgpZZm%2blSOWBCfFDIjWrozfvPsacKRoh5Q%3d&risl=&pid=ImgRaw&r=0");
   color: white;
   line-height: 1.6;
 }
